# uzerp-dev-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/uzerp/: __main__.py  commands.py  pod.py
src/uzerp/scripts/: build-pod.sh  pg-bootstrap.sh  postgres.conf
uzerp/: __main__.py  pod.py
uzerp/scripts/: build-pod.sh  djangosettings.py  frepple-schema.sql  pg-bootstrap.sh
